--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# OpenAI API Key (required for serverless functions)
-OPENAI_API_KEY=your_openai_api_key_here 
+# OpenAI API Key - Required for AI functionality
+VITE_OPENAI_API_KEY=your_openai_api_key_here 
