--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,12 @@
   command = "npm run build"
   publish = "dist"
 
+[context.production]
+  command = "npm run build"
+
+[context.deploy-preview]
+  command = "npm run build"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
