--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,19 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  node_version = "18"
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
 
 [context.production]
   command = "npm run build"
 
 [context.deploy-preview]
+  command = "npm run build"
+
+[context.branch-deploy]
   command = "npm run build"
 
 [[redirects]]
