--- a/netlify.toml
+++ b/netlify.toml
@@ -1,31 +1,23 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  node_version = "18"
   base = "/"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "9"
-  NETLIFY_USE_YARN = "false"
-  CI = "true"
+  NODE_VERSION = "20"
 
-[context.production]
-  command = "npm run build"
-  publish = "dist"
-  base = "/"
-
-[context.deploy-preview]
-  command = "npm run build"
-  publish = "dist"
-  base = "/"
-
-[context.branch-deploy]
-  command = "npm run build"
-  publish = "dist"
-  base = "/"
-
+# Redirect all routes to index.html for SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+# Headers to enable SPA routing and security
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self' https://api.openai.com; img-src 'self' https://images.unsplash.com data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://api.openai.com;" 
